--- a/src/player-side-panel.scss
+++ b/src/player-side-panel.scss
@@ -41,13 +41,3 @@
     color: #000;
   }
 }
-.game-info-side-panel {
-  background-color: #ebd5bd;
-  border-radius: 8px 0 0 8px;
-  box-shadow: 0 3px 8px #0000004d;
-  padding: 5px 12px;
-  margin: 0.5rem 0;
-  .fa6 {
-    width: 1rem;
-  }
-}
